public class ProductHelper {
    public static void createItemFromText(){//dosyadan okuma yapnak için

    }

    public static void getTotalBlance(){//listedeki toplam ödeme miktarı

    }
}
