@startuml Product
title Product Model
class Product{
    -name
    -price
    -quantity
    --
    +getName()
    +getPrice()
    +getQuantity()
    --
    +setName(value)
    +setPrice(value)
    +setQuantity(value)
    --
    +Product(name, price, quantity)
    --
    +getTotalPrice()
    +toString()
}

class ProductHelper{
    +{static}createItemFromText()
    +{static}getBalance()
}

Product -u-|> Object : <<extends>>
ProductHelper -l-|> Object : <<extends>>
hide empty members
@enduml